--- a/calendar-project/calendar/index.html
+++ b/calendar-project/calendar/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Date & Time Picker</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.css">
-</head>
-<body>
-  <div class="container">
-    <h1>Select Date and Time</h1>
-    <form id="calendar-form">
-      <input id="date-time-picker" type="text" name="datetime" placeholder="Pick a date and time" required>
-      <button class="submit-button" type="submit">Submit</button>
-    </form>
-  </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.js"></script>
-  <script src="scripts.js"></script>
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <script defer src="scripts.js"></script>
+    </head>
+    <body>
+        <h1>Date and Time Picker with Voiceflow Integration</h1>
+        <label for="name">Username:</label>
+        <input id="name" name="name" type="text" placeholder="Your name here">
+        <label for="datetime">Select Date and Time:</label>
+        <input id="datetime" type="datetime-local">
+        <button id="send-datetime">Send Date and Time</button>
+        <ul id="root"></ul>
+    </body>
 </html>
