--- a/calendar-project/calendar/index.html
+++ b/calendar-project/calendar/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Date and Time Picker</title>
+  <title>Order Refund</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -13,13 +13,13 @@
     <input id="name" type="text" placeholder="Enter your name" required>
 
     <label for="location">Location:</label>
-    <input id="location" type="text" placeholder="Enter your location" required>
+    <input id="location" type="text" placeholder="Enter your location ( Inman Square or One Canal Park )" required>
 
     <label for="order-number">Order Number:</label>
-    <input id="order-number" type="text" placeholder="Enter your order number" required>
+    <input id="order-number" type="text" placeholder="Enter your order number or name under" required>
 
     <label for="refund-reason">Refund Reason:</label>
-    <textarea id="refund-reason" placeholder="Explain refund reason" required></textarea>
+    <textarea id="refund-reason" placeholder="Brief explain refund reason" required></textarea>
 
     <label for="datetime">Select Date and Time:</label>
     <input id="datetime" type="datetime-local" required>
