--- a/calendar-project/calendar/index.html
+++ b/calendar-project/calendar/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Date and Time Picker</h1>
+  <h1>Order Refund</h1>
   <form id="picker-form">
     <label for="name">Name:</label>
     <input id="name" type="text" placeholder="Enter your name" required>
